--- a/MaratonandoApp/Client/wwwroot/index.html
+++ b/MaratonandoApp/Client/wwwroot/index.html
@@ -24,6 +24,9 @@
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+    <script src="js/Utilidades.js"></script>
 </body>
 
 </html>
